style.css
body {
	background-color: #fff6f6;
}

svg {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

#buttons {
	width: 320px;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 20px;
}

p, h1 {
	margin-top: 8px;
	margin-bottom: 8px;
	text-align: center;
	font-family: Verdana, sans-serif;
}

h1 {
	color: #fd1c27;
}

#grid {
	height: 240px;
	width: 240px;
	margin-left: auto;
	margin-right: auto;
}

.blocks {
	height: 20px;
	width: 20px;
	background-color: red;
	display: inline-block;
}

